alb.tf

# APPLICATION LOAD BALANCER


resource "aws_lb" "app" {

  name = "${var.project_name}-alb"

  internal = false

  load_balancer_type = "application"

  security_groups = [
    aws_security_group.alb_sg.id
  ]

  subnets = [
    aws_subnet.public_1.id,
    aws_subnet.public_2.id
  ]

  enable_deletion_protection = false

  tags = {
    Name = "${var.project_name}-alb"
  }
}



# TARGET GROUP

resource "aws_lb_target_group" "app" {

  name = "${var.project_name}-target-group"

  port = 3000

  protocol = "HTTP"

  vpc_id = aws_vpc.main.id

  target_type = "instance"

  health_check {

    enabled = true

    protocol = "HTTP"

    path = "/health"

    port = "traffic-port"

    healthy_threshold = 2

    unhealthy_threshold = 3

    timeout = 5

    interval = 30

    matcher = "200"
  }

  tags = {
    Name = "${var.project_name}-target-group"
  }
}



# HTTP LISTENER


resource "aws_lb_listener" "http" {

  load_balancer_arn = aws_lb.app.arn

  port = 80

  protocol = "HTTP"

  default_action {

    type = "forward"

    target_group_arn = aws_lb_target_group.app.arn
  }
}
